--- a/STTDataAnalyzer/App.config
+++ b/STTDataAnalyzer/App.config
@@ -2,5 +2,22 @@
 <configuration>
 	<appSettings>
 		<add key="Path" value="C:\Users\nikea\Desktop\STT\"/>
+		<add key="DataCoreCrewFileName" value="STT - Crew.tsv"/>
+		<add key="DataCoreEquipmentFileName" value="STT - Equipment.tsv"/>
+		<add key="DataCoreItemsFileName" value="STT - Items.tsv"/>
+		<add key="DataCoreShipsFileName" value="STT - Ships.tsv"/>
+
+		<add key="PlayerDataFileName" value="PlayerData.json"/>
+
+		<add key="MultiWordTraits" value ="Cloaking Device,Transwarp Drive,Electromagnetic Pulse,War Veteran,Spore Drive,Orion Syndicate"/>
+
+		<add key="CommandSkillName" value="CommandSkill"/>
+		<add key="DiplomacySkillName" value="DiplomacySkill"/>
+		<add key="EngineeringSkillName" value="EngineeringSkill"/>
+		<add key="MedicineSkillName" value="MedicineSkill"/>
+		<add key="ScienceSkillName" value="ScienceSkill"/>
+		<add key="SecuritySkillName" value="SecuritySkill"/>
+		<!--
+		-->
 	</appSettings>
 </configuration>
