--- a/NewUtilities/NewUtilities.csproj
+++ b/NewUtilities/NewUtilities.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +50,8 @@
     <Compile Include="ExtensionMethods\EnumExtentionMethods.cs" />
     <Compile Include="ExtensionMethods\IEnumerableExtensionMethods.cs" />
     <Compile Include="ExtensionMethods\IntExtensionMethods.cs" />
+    <Compile Include="GetPlayerData.cs" />
+    <Compile Include="OAuth.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VoyageTraitBitmap.cs" />
   </ItemGroup>
