--- a/STTDataAnalyzer/STTDataAnalyzer.csproj
+++ b/STTDataAnalyzer/STTDataAnalyzer.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NewModels\NewModels.csproj" />
+    <ProjectReference Include="..\NewUtilities\NewUtilities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
