--- a/NewModels/NewModels.csproj
+++ b/NewModels/NewModels.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.WinHttpHandler">
+      <HintPath>..\packages\System.Net.Http.WinHttpHandler.6.0.0\lib\net461\System.Net.Http.WinHttpHandler.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -69,6 +72,7 @@
     <Compile Include="PartialClasses\PlayerData\Crew.cs" />
     <Compile Include="PartialClasses\PlayerData\ItemArchetypeCache.cs" />
     <Compile Include="PartialClasses\PlayerData\PlayerData.cs" />
+    <Compile Include="PartialClasses\PlayerData\VoyageDescription.cs" />
     <Compile Include="PlayerData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Static\Ability.cs" />
