--- a/STTDataAnalyzer/STTDataAnalyzer.csproj
+++ b/STTDataAnalyzer/STTDataAnalyzer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
   </PropertyGroup>
 
   <ItemGroup>
