--- a/NewSTTDataAnalyzer/App.config
+++ b/NewSTTDataAnalyzer/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
 		<add key="Path" value="C:\Users\nikea\Desktop\STT\"/>
@@ -9,7 +9,7 @@
 
 		<add key="PlayerDataFileName" value="PlayerData.json"/>
 
-		<add key="MultiWordTraits" value ="Cloaking Device,Transwarp Drive,Electromagnetic Pulse,War Veteran,Spore Drive,Orion Syndicate"/>
+		<add key="MultiWordTraits" value="Cloaking Device,Transwarp Drive,Electromagnetic Pulse,War Veteran,Spore Drive,Orion Syndicate"/>
 
 		<add key="CommandSkillName" value="CommandSkill"/>
 		<add key="DiplomacySkillName" value="DiplomacySkill"/>
@@ -20,4 +20,4 @@
 		<!--
 		-->
 	</appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
