--- a/NewSTTDataAnalyzer/packages.config
+++ b/NewSTTDataAnalyzer/packages.config
@@ -5,4 +5,5 @@
   <package id="System.Net.Http.WinHttpHandler" version="6.0.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
